[package]
name = "db"
version = "0.1.0"
authors = ["ChainSafe Systems <info@chainsafe.io>"]
edition = "2018"

[dependencies]
rocksdb = "0.13.0"
blocks = { package = "forest_blocks", path = "../../blockchain/blocks"}
encoding = { package = "forest_encoding", path = "../../encoding"}
async-std = { version = "1.4.0", features = ["unstable"] }
async-trait = "0.1.24"
